<resources>
    <string name="app_name">Coffee_Recipes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ปวีณา วงษา</string>
    <string name="nav_header_subtitle">gtoon2543@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="coffee">Coffee</string>
    <string name="bakery">Bakery</string>
    <string name="favorites">Favorites</string>
    <string name="singout">Sing Out</string>
</resources>
