<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.coffee_recipes.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_coffee"
        android:name="com.example.coffee_recipes.ui.gallery.GalleryFragment"
        android:label="@string/coffee"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_bakery"
        android:name="com.example.coffee_recipes.ui.slideshow.SlideshowFragment"
        android:label="@string/bakery"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.coffee_recipes.ui.share.ShareFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_singout"
        android:name="com.example.coffee_recipes.ui.send.SendFragment"
        android:label="@string/singout"
        tools:layout="@layout/fragment_send" />
</navigation>